fix: correcoes da auditoria de 29/08/2026 (28 achados + 3 novos)
Aplica as quatro ondas do relatorio docs/AUDITORIA_BUGS_2026-08-29.md.
Restricao respeitada: nenhum framework ou biblioteca nova no backend — tudo
com o JDK e a Jakarta EE que o projeto ja usava. O pom.xml nao mudou.

P0 — BLOQUEADORES
- P0-1 AuthFilter passa a cobrir /* com negacao por padrao. Os 21 servlets
  estavam na raiz do contexto, fora do padrao /view/admin/* do filtro antigo,
  e nenhum validava sessao: a API inteira respondia sem login. Chamada AJAX
  sem sessao agora recebe 401 JSON; navegacao continua indo ao login.
- P0-2 Senhas em PBKDF2-HMAC-SHA256 com salt (Util.SenhaUtil, javax.crypto).
  Coluna ampliada para varchar(255) na V20 e conversao automatica no boot
  (Util.MigracaoSenhas) — ninguem precisa redefinir senha. Campo senhaPessoa
  virou transient (Gson nao serializa mais), os SELECT de listagem pararam de
  trazer a coluna e o value="<%= getSenhaPessoa() %>" saiu do JSP.
- P0-3 Credenciais fora do codigo: Util.ConfigUtil le agro.properties de
  -Dagro.config, AGRO_CONFIG ou $CATALINA_BASE/conf. O arquivo preenchido
  esta no .gitignore; agro.properties.example fica versionado.
- P0-4 Util.ConnectionPool: pool proprio em Java puro (BlockingQueue +
  java.lang.reflect.Proxy). O proxy devolve a conexao ao pool no close(),
  entao todo o codigo com try-with-resources passou a liberar corretamente.
  Os 32 pontos de vazamento (20 que nunca fechavam) foram convertidos.
- P0-5 Removidos os catch que engoliam SQLException em ClassificacaoDAO,
  DespesasCustosDAO, AlimentoDAO, ParceiroDAO e AlimentoClassificacaoDao —
  o servlet respondia "Cadastrado com sucesso!" sem gravar nada.

P1 — ALTO
- P1-6 Empreita passa a usar diario_funcionario.valor_contratado (o valor
  daquela atividade) em vez de valorfixoacordado (o contrato inteiro), que
  era cobrado de novo em cada atividade. Diaria de diarista rateada por
  pessoa/dia. V21 faz o backfill preservando o total historico.
- P1-7 Maquina d